Created the Post method of the servico route
