# api/controllers/usuario.controller.js
@@ -1,10 +1,12 @@
 "use strict";
 
+const auth = require("../helpers/auth.helper");
 const db = require("../helpers/db.helper");
 const response = require("../helpers/response.helper");
 
 module.exports = {
-  registerPost: registerPost
+  registerPost: registerPost,
+  loginPost: loginPost
 }
 
 function registerPost(req, res, next) {
@@ -20,9 +22,25 @@ function registerPost(req, res, next) {
 
   db.registrarUsuario(registration, function(result) {
     if (!(result instanceof Error)) {
-      return response.sendSuccess(res, { message: "User registered." });
+      return response.sendSuccess(res, { message: "User registered" });
     } else {
       return response.sendDefaultError(res, { message: result.message });
     }
   });
 }
+
+function loginPost(req, res, next) {
+  const authentication = req.swagger.params['authentication'].value;
+
+  if (authentication.email === undefined || authentication.senha === undefined) {
+    return response.sendDefaultError(res, { message: "Error: 'email' and 'senha' are required" });
+  }
+
+  auth.issueToken(authentication, function(result) {
+    if (!(result instanceof Error)) {
+      return response.sendSuccess(res, { token: result });
+    } else {
+      return response.sendResponse(res, 403, { message: result.message });
+    }
+  });
+};
